// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchField should render correctly 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-td742h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-td742h[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:not([data-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small']:not([data-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'][data-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  font-weight: bold;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-1d95tts {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1d95tts[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <div
        aria-disabled="false"
        class="cache-td742h e1x48wse1"
      >
        <div
          class="cache-jawhxr-primary-StyledSwitch-success-StyledSwitch e1x48wse3"
          data-checked="false"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-0 e1x48wse5"
          >
            <span
              class="cache-0 e1x48wse6"
            />
          </div>
          <input
            aria-label="test"
            class="cache-1d95tts e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-td742h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-td742h[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:not([data-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small']:not([data-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'][data-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  font-weight: bold;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-1d95tts {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1d95tts[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <div
        aria-disabled="false"
        class="cache-td742h e1x48wse1"
      >
        <div
          class="cache-jawhxr-primary-StyledSwitch-success-StyledSwitch e1x48wse3"
          data-checked="true"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-0 e1x48wse5"
          >
            <span
              class="cache-0 e1x48wse6"
            />
          </div>
          <input
            aria-label="test"
            checked=""
            class="cache-1d95tts e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-td742h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-td742h[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:not([data-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small']:not([data-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'][data-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  font-weight: bold;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-1d95tts {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1d95tts[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <div
        aria-disabled="true"
        class="cache-td742h e1x48wse1"
      >
        <div
          class="cache-jawhxr-primary-StyledSwitch-success-StyledSwitch e1x48wse3"
          data-checked="false"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-0 e1x48wse5"
          >
            <span
              class="cache-0 e1x48wse6"
            />
          </div>
          <input
            aria-label="test"
            class="cache-1d95tts e1x48wse2"
            disabled=""
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with label and checked 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-td742h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-td742h[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:not([data-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small']:not([data-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'][data-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  font-weight: bold;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-1d95tts {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1d95tts[disabled] {
  cursor: not-allowed;
}

.cache-158kr7v-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #390171;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <div
        aria-disabled="false"
        class="cache-td742h e1x48wse1"
      >
        <div
          class="cache-jawhxr-primary-StyledSwitch-success-StyledSwitch e1x48wse3"
          data-checked="true"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-0 e1x48wse5"
          >
            <span
              class="cache-0 e1x48wse6"
            />
          </div>
          <input
            aria-label="test"
            checked=""
            class="cache-1d95tts e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </div>
      <div
        class="e1g1zfwd0 cache-158kr7v-variantStyles-colorStyles"
      >
        test
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with offLabel 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-td742h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-td742h[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:not([data-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small']:not([data-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'][data-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  font-weight: bold;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-1d95tts {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1d95tts[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <div
        aria-disabled="false"
        class="cache-td742h e1x48wse1"
      >
        <div
          class="cache-jawhxr-primary-StyledSwitch-success-StyledSwitch e1x48wse3"
          data-checked="false"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-0 e1x48wse5"
          >
            <span
              class="cache-0 e1x48wse6"
            />
          </div>
          <input
            aria-label="test"
            class="cache-1d95tts e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with onLabel 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-td742h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-td742h[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:not([data-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small']:not([data-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'][data-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  font-weight: bold;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-1d95tts {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1d95tts[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <div
        aria-disabled="false"
        class="cache-td742h e1x48wse1"
      >
        <div
          class="cache-jawhxr-primary-StyledSwitch-success-StyledSwitch e1x48wse3"
          data-checked="false"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-0 e1x48wse5"
          >
            <span
              class="cache-0 e1x48wse6"
            />
          </div>
          <input
            aria-label="test"
            class="cache-1d95tts e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly without onLabel and offLabel but has label 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-td742h {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-td742h[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch:not([data-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small']:not([data-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-size='small'][data-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='primary'][data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  font-weight: bold;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus-within,
.cache-jawhxr-primary-StyledSwitch-success-StyledSwitch[data-variant='success'][data-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-1d95tts {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1d95tts[disabled] {
  cursor: not-allowed;
}

.cache-s7vwv0-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <div
        aria-disabled="false"
        class="cache-td742h e1x48wse1"
      >
        <div
          class="cache-jawhxr-primary-StyledSwitch-success-StyledSwitch e1x48wse3"
          data-checked="false"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-0 e1x48wse5"
          >
            <span
              class="cache-0 e1x48wse6"
            />
          </div>
          <input
            aria-label="test"
            class="cache-1d95tts e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </div>
      <div
        class="e1g1zfwd0 cache-s7vwv0-variantStyles-colorStyles"
      >
        test
      </div>
    </div>
  </form>
</DocumentFragment>
`;
